feat(tools): remove jmacro-tools
- this functionality should be implemented on demand in commands, like web driver manager